# android_hardware_rockchip_librkcrypto

./: Android.mk  CMakeLists.txt  README.md  build.sh
demo/: Android.mk  CMakeLists.txt  demo_cipher.c  demo_hash.c  demo_otpkey.c  demo_rsa.c  rk_demo.c  rk_demo.h  rkcrypto_demo.c  rkcrypto_demo.h
docs/: Rockchip_Developer_Guide_librkcrypto_CN.md
include/: cryptodev.h  librkcrypto.h  otp_key_crypto.h  rkcrypto_common.h  rkcrypto_core.h  rkcrypto_core_int.h  rkcrypto_random.h  rkcrypto_trace.h
src/: otp_key_crypto.c  rkcrypto_core.c  rkcrypto_mem.c  rkcrypto_otp_key.c  rkcrypto_random.c  rkcrypto_rsa_helper.c  rkcrypto_rsa_helper.h  rkcrypto_trace.c
test/: Android.mk  CMakeLists.txt  cmode_adapter.c  cmode_adapter.h  main.c  test_cipher.c  test_cipher.h  test_crypto_mem.c  test_hash.c  test_hash.h  test_multi.c  test_otp_key_crypto.c  test_otp_key_crypto.h  test_random.c  test_rsa.c  test_stress.c  test_throughput.c  test_utils.c  test_utils.h
test/c_mode/: CMakeLists.txt  aes_cfb.c  aes_ctr.c  aes_ofb.c  des_cfb.c  des_ofb.c  hash_sm3.c  sm4_cfb.c  sm4_ctr.c
test/perf/RK3528/: perf_reports.txt
test/perf/RK3528/Android9/: librkcrypto_demo  librkcrypto_test
